[profile.release-with-debug]
inherits = "release"
debug = true
split-debuginfo = "packed"

[workspace]
members = [
    "logger",
    "new_crates/*",
    "sdk",
    "sdk/macro",
    "sdk/program",
]

exclude = [
    "programs/sbf",
]

# This prevents a Travis CI error when building for Windows.
resolver = "2"

[workspace.package]
version = "1.17.0"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solanalabs.com/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.75"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
array-bytes = "=1.4.1"
assert_matches = "1.5.0"
base64 = "0.21.4"
bincode = "1.3.3"
bitflags = { version = "2.3.3", features = ["serde"] }
blake3 = "1.4.1"
borsh = "0.10.3"
bs58 = "0.4.0"
bv = "0.11.1"
bytemuck = "1.14.0"
byteorder = "1.4.3"
cc = "1.0.83"
chrono = { version = "0.4.30", default-features = false }
console_error_panic_hook = "0.1.7"
console_log = "0.2.2"
curve25519-dalek = "3.2.1"
derivation-path = { version = "0.2.0", default-features = false }
digest = "0.10.7"
ed25519-dalek = "=1.0.1"
ed25519-dalek-bip32 = "0.2.0"
env_logger = "0.9.3"
generic-array = { version = "0.14.7", default-features = false }
getrandom = "0.2.10"
hex = "0.4.3"
hidapi = { version = "2.4.1", default-features = false }
hmac = "0.12.1"
itertools = "0.10.5"
js-sys = "0.3.64"
lazy_static = "1.4.0"
libc = "0.2.148"
libsecp256k1 = "0.6.0"
light-poseidon = "0.1.1"
log = "0.4.20"
memmap2 = "0.5.10"
memoffset = "0.9"
num-bigint = "0.4.4"
num_enum = "0.6.1"
num-derive = "0.3"
num-traits = "0.2"
parking_lot = "0.12"
pbkdf2 = { version = "0.11.0", default-features = false }
proc-macro2 = "1.0.67"
qstring = "0.7.2"
qualifier_attr = { version = "0.2.2", default-features = false }
quote = "1.0"
rand = "0.8.5"
rustc_version = "0.4"
rustversion = "1.0.14"
scopeguard = "1.2.0"
serde = "1.0.188"
serde_bytes = "0.11.12"
serde_derive = "1.0.103"
serde_json = "1.0.107"
serde_with = { version = "2.3.3", default-features = false }
sha2 = "0.10.7"
sha3 = "0.10.4"
solana-alt-bn128 = { path = "new_crates/alt-bn128" }
solana-atomic-u64 = { path = "new_crates/atomic-u64" }
solana-big-mod-exp = { path = "new_crates/big-mod-exp" }
solana-blake3 = { path = "new_crates/blake3" }
solana-clock = { path = "new_crates/clock" }
solana-decode-error = { path = "new_crates/decode-error" }
solana-derivation-path = { path = "new_crates/derivation-path" }
solana-download-utils = { path = "download-utils", version = "=1.17.0" }
solana-epoch-schedule = { path = "new_crates/epoch-schedule" }
solana-hash = { path = "new_crates/hash" }
solana-instruction = { path = "new_crates/instruction" }
solana-keccak = { path = "new_crates/keccak" }
solana-logger = { path = "logger", version = "=1.17.0" }
solana-msg-and-friends = { path = "new_crates/msg-and-friends" }
solana-native-programs = { path = "new_crates/native-programs" }
solana-poseidon = { path = "new_crates/poseidon" }
solana-program = { path = "sdk/program", version = "=1.17.0" }
solana-pubkey = { path = "new_crates/pubkey" }
solana-rent = { path = "new_crates/rent" }
solana-sanitize = { path = "new_crates/sanitize" }
solana-secp256k1-recover = { path = "new_crates/secp256k1-recover" }
solana-serialize-utils = { path = "new_crates/serialize-utils" }
solana-sdk = { path = "sdk", version = "=1.17.0" }
solana-sdk-macro = { path = "sdk/macro", version = "=1.17.0" }
solana-short-vec = { path = "new_crates/short-vec" }
solana-stable-layout = { path = "new_crates/stable-layout" }
solana-syscall-core = { path = "new_crates/syscall-core" }
solana-wasm-bindgen = { path = "new_crates/wasm-bindgen" }
static_assertions = "1.1.0"
syn = "2.0"
tar = "0.4.40"
thiserror = "1.0.48"
tiny-bip39 = "0.8.2"
uriparse = "0.6.4"
wasm-bindgen = "0.2"
zeroize = { version = "1.3", default-features = false }
zstd = "0.11.2"

[patch.crates-io]
solana-program = { path = "sdk/program" }
