[profile.release-with-debug]
inherits = "release"
debug = true
split-debuginfo = "packed"

[workspace]
members = [
    "logger",
    "new_crates/*",
    "sdk",
    "sdk/macro",
    "sdk/program",
]

exclude = [
    "programs/sbf",
]

# This prevents a Travis CI error when building for Windows.
resolver = "2"

[workspace.package]
version = "1.17.0"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solanalabs.com/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.75"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
array-bytes = "=1.4.1"
assert_matches = "1.5.0"
base64 = "0.21.4"
bincode = "1.3.3"
bitflags = { version = "2.3.3", features = ["serde"] }
blake3 = "1.4.1"
borsh = "0.10.3"
bs58 = "0.4.0"
bv = "0.11.1"
bytemuck = "1.14.0"
byteorder = "1.4.3"
cc = "1.0.83"
chrono = { version = "0.4.30", default-features = false }
console_error_panic_hook = "0.1.7"
console_log = "0.2.2"
curve25519-dalek = { git = "https://github.com/kevinheavey/curve25519-dalek", rev = "9951bf4ae333d90d0d349dcfd9057b42ec0e0931" }
derivation-path = { version = "0.2.0", default-features = false }
digest = "0.10.7"
ed25519-dalek = "=1.0.1"
ed25519-dalek-bip32 = "0.2.0"
env_logger = "0.9.3"
generic-array = { version = "0.14.7", default-features = false }
getrandom = "0.2.10"
hex = "0.4.3"
hidapi = { version = "2.4.1", default-features = false }
hmac = "0.12.1"
itertools = "0.10.5"
js-sys = "0.3.64"
lazy_static = "1.4.0"
libc = "0.2.148"
libsecp256k1 = "0.6.0"
light-poseidon = "0.1.1"
log = "0.4.20"
memmap2 = "0.5.10"
memoffset = "0.9"
num-bigint = "0.4.4"
num_enum = "0.6.1"
num-derive = "0.3"
num-traits = "0.2"
parking_lot = "0.12"
pbkdf2 = { version = "0.11.0", default-features = false }
proc-macro2 = "1.0.67"
qstring = "0.7.2"
qualifier_attr = { version = "0.2.2", default-features = false }
quote = "1.0"
rand = "0.8.5"
rand0-7 = { package = "rand", version = "0.7" }
rustc_version = "0.4"
rustversion = "1.0.14"
scopeguard = "1.2.0"
serde = "1.0.188"
serde_bytes = "0.11.12"
serde_derive = "1.0.103"
serde_json = "1.0.107"
serde_with = { version = "2.3.3", default-features = false }
sha2 = "0.10.7"
sha3 = "0.10.4"
solana-account = { path = "new_crates/account" }
solana-address-lookup-table-core = { path = "new_crates/address-lookup-table-core" }
solana-alt-bn128 = { path = "new_crates/alt-bn128" }
solana-atomic-u64 = { path = "new_crates/atomic-u64" }
solana-big-mod-exp = { path = "new_crates/big-mod-exp" }
solana-blake3 = { path = "new_crates/blake3" }
solana-borsh = { path = "new_crates/borsh" }
solana-borsh0-10 = { path = "new_crates/borsh0-10" }
solana-clock = { path = "new_crates/clock" }
solana-cpi = { path = "new_crates/cpi" }
solana-decode-error = { path = "new_crates/decode-error" }
solana-derivation-path = { path = "new_crates/derivation-path" }
solana-download-utils = { path = "download-utils", version = "=1.17.0" }
solana-ed25519-instruction = { path = "new_crates/ed25519-instruction" }
solana-epoch-schedule = { path = "new_crates/epoch-schedule" }
solana-epoch-rewards = { path = "new_crates/epoch-rewards" }
solana-feature-set = { path = "new_crates/feature-set" }
solana-hash = { path = "new_crates/hash" }
solana-instruction = { path = "new_crates/instruction" }
solana-lamports = { path = "new_crates/lamports" }
solana-keccak = { path = "new_crates/keccak" }
solana-last-restart-slot = { path = "new_crates/last-restart-slot" }
solana-logger = { path = "logger", version = "=1.17.0" }
solana-message = { path = "new_crates/message" }
solana-msg-and-friends = { path = "new_crates/msg-and-friends" }
solana-native-programs = { path = "new_crates/native-programs" }
solana-nonce-core = { path = "new_crates/nonce-core" }
solana-packet = { path = "new_crates/packet" }
solana-poseidon = { path = "new_crates/poseidon" }
solana-poseidon-core = { path = "new_crates/poseidon-core" }
solana-poseidon-hashv = { path = "new_crates/poseidon-hashv" }
solana-poseidon-syscall-error = { path = "new_crates/poseidon-syscall-error" }
solana-precompiles = { path = "new_crates/precompiles" }
solana-precompile-error = { path = "new_crates/precompile-error" }
solana-program = { path = "sdk/program", version = "=1.17.0" }
solana-program-utils = { path = "new_crates/program-utils" }
solana-program-utils-sdk = { path = "new_crates/program-utils-sdk" }
solana-pubkey = { path = "new_crates/pubkey" }
solana-pubkey-sdk = { path = "new_crates/pubkey-sdk" }
solana-rent = { path = "new_crates/rent" }
solana-sanitize = { path = "new_crates/sanitize" }
solana-secp256k1-instruction = { path = "new_crates/secp256k1-instruction" }
solana-secp256k1-recover = { path = "new_crates/secp256k1-recover" }
solana-serialize-utils = { path = "new_crates/serialize-utils" }
solana-sdk = { path = "sdk", version = "=1.17.0" }
solana-sdk-macro = { path = "sdk/macro", version = "=1.17.0" }
solana-serde-varint = { path = "new_crates/serde-varint" }
solana-short-vec = { path = "new_crates/short-vec" }
solana-signature-core = { path = "new_crates/signature-core" }
solana-signer = { path = "new_crates/signer" }
solana-slot-hashes = { path = "new_crates/slot-hashes" }
solana-slot-history = { path = "new_crates/slot-history" }
solana-stable-layout = { path = "new_crates/stable-layout" }
solana-stake = { path = "new_crates/stake" }
solana-stake-history = { path = "new_crates/stake-history" }
solana-syscall-core = { path = "new_crates/syscall-core" }
solana-system-instruction-core = { path = "new_crates/system-instruction-core" }
solana-sysvar-core = { path = "new_crates/sysvar-core" }
solana-transaction = { path = "new_crates/transaction"}
solana-transaction-context = { path = "new_crates/transaction-context"}
solana-transaction-error = { path = "new_crates/transaction-error"}
solana-vote = { path = "new_crates/vote" }
solana-wasm-bindgen = { path = "new_crates/wasm-bindgen" }
static_assertions = "1.1.0"
syn = "2.0"
tar = "0.4.40"
thiserror = "1.0.48"
tiny-bip39 = "0.8.2"
uriparse = "0.6.4"
wasm-bindgen = "0.2"
zeroize = { version = "1.3", default-features = false }
zstd = "0.11.2"

[patch.crates-io]
solana-program = { path = "sdk/program" }
