[package]
name = "solana-account-decoder-client-types"
description = "Core RPC client types for solana-account-decoder"
documentation = "https://docs.rs/solana-account-decoder-client-types"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
base64 = { workspace = true }
bs58 = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
zstd = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
