[package]
name = "solana-rpc-account-info-config"
description = "Solana GetAccountInfo config"
documentation = "https://docs.rs/solana-rpc-account-info-config"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_derive = { workspace = true }
solana-sdk = { workspace = true, default-features = false, features = ["full"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
