[package]
name = "solana-rpc-filter"
description = "Solana RPC filter type"
documentation = "https://docs.rs/solana-rpc-filter"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
base64 = { workspace = true }
bs58 = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
solana-inline-spl = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
const_format = { workspace = true }
serde_json = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
