[package]
name = "solana-rpc-sender"
description = "Solana RpcSender trait"
documentation = "https://docs.rs/solana-rpc-sender"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
solana-rpc-client-api = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
