[package]
name = "solana-send-transaction-service"
description = "Solana send transaction service"
documentation = "https://docs.rs/solana-send-transaction-service"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
crossbeam-channel = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
solana-client = { workspace = true }
solana-connection-cache = { workspace = true }
solana-hash = { workspace = true }
solana-keypair = { workspace = true }
solana-measure = { workspace = true }
solana-metrics = { workspace = true }
solana-nonce-account = { workspace = true }
solana-pubkey = { workspace = true }
solana-quic-client = { workspace = true }
solana-runtime = { workspace = true }
solana-signature = { workspace = true }
solana-time-utils = { workspace = true }
solana-tpu-client-next = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }

[dev-dependencies]
solana-account = { workspace = true }
solana-fee-calculator = { workspace = true }
solana-logger = { workspace = true }
solana-nonce = { workspace = true }
solana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
solana-sdk = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-signer = { workspace = true }
solana-system-transaction = { workspace = true }

[features]
dev-context-only-utils = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
