[package]
name = "solana-short-vec"
description = "Solana compact serde-encoding of vectors with small length."
documentation = "https://docs.rs/solana-short-vec"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[dependencies]
serde = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
bincode = { workspace = true }
serde_json = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
