[package]
name = "solana-svm-transaction"
description = "Solana SVM Transaction"
documentation = "https://docs.rs/solana-svm-transaction"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-hash = { workspace = true }
solana-program = { workspace = true, default-features = false }
solana-pubkey = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-signature = { workspace = true }
solana-transaction = { workspace = true }

[dev-dependencies]
solana-nonce = { workspace = true }
static_assertions = { workspace = true }
