[package]
name = "solana-secp256k1-recover"
description = "Solana SECP256K1 Recover"
documentation = "https://docs.rs/solana-secp256k1-recover"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
borsh = { workspace = true, optional = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "solana")'.dependencies]
solana-program = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
libsecp256k1 = { workspace = true }

[features]
borsh = ["dep:borsh"]
