[package]
name = "solana-secp256k1-recover"
description = "Solana SECP256K1 Recover"
documentation = "https://docs.rs/solana-secp256k1-recover"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
borsh = { workspace = true, optional = true }
solana-frozen-abi = { workspace = true, optional = true }
thiserror = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
libsecp256k1 = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
solana-program = { workspace = true }
solana-secp256k1-recover = { path = ".", features = ["borsh"] }

[target.'cfg(not(target_os = "solana"))'.dev-dependencies]
libsecp256k1 = { workspace = true, features = ["hmac"] }

[build-dependencies]
rustc_version = { workspace = true }

[features]
borsh = ["dep:borsh"]
frozen-abi = ["dep:solana-frozen-abi"]
