[package]
name = "solana-big-mod-exp"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bytemuck = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "solana")'.dependencies]
solana-syscall-core = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
num-bigint = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
array-bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
