[package]
name = "solana-borsh0-10"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
borsh = { workspace = true }
solana-borsh = { workspace = true }
thiserror = { workspace = true }
