[package]
name = "solana-clock"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { workspace = true, features = ["derive"] }
solana-sdk-macro = { workspace = true }

[dev-dependencies]
static_assertions = { workspace = true }
