[package]
name = "solana-ed25519-instruction"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bytemuck = { workspace = true }
ed25519-dalek = { workspace = true }
solana-feature-set = { workspace = true }
solana-instruction = { workspace = true }
solana-native-programs = { workspace = true }
solana-precompile-error = { workspace = true }
