[package]
name = "solana-epoch-schedule"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { workspace = true, features = ["derive"] }
solana-clock = { workspace = true }
solana-sdk-macro = { workspace = true }
